tests/miniJava/neg/006709_mutation.MiniJava
class java { public static void String Main ( String [ ] java ) { { } } }
